--- a/index.html
+++ b/index.html
@@ -8,8 +8,7 @@
 <body>
     <span>git</span>
     <span>1111</span>
-    <h1>222</h1>
     <p>dev1</p>
-    <span>dev</span>
+    <p>dev</p>
 </body>
 </html>
